Add 4Square layer
Include ajax layer to 4Square

--- a/webmapping/styles/app.css
+++ b/webmapping/styles/app.css
@@ -7,3 +7,7 @@ html, body, #container /*, and all other map parent selectors*/ {
     width: auto;
     height: 100%;
   }
+  .myControlCoords {
+    padding-top:50%;
+    padding-left: 50%;
+ }
